- Fixed bug #55086 (Namespace alias does not work inside trait's use block)   patch by: Pierrick

git-svn-id: http://svn.php.net/repository/php/php-src/trunk@312817 c90b9560-bf6c-de11-be94-00142212c4b1